Add template namespace using new class QualifiedName for OPerand name