@@ -15,26 +15,30 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/> */
 package au.com.cybersearch2.classy_logic.list;
 
+import static org.fest.assertions.api.Assertions.assertThat;
+import static org.fest.assertions.api.Assertions.failBecauseExceptionWasNotThrown;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import java.math.BigDecimal;
 
 import org.junit.Test;
 
-import au.com.cybersearch2.classy_logic.expression.BigDecimalOperand;
-import au.com.cybersearch2.classy_logic.expression.BooleanOperand;
-import au.com.cybersearch2.classy_logic.expression.DoubleOperand;
-import au.com.cybersearch2.classy_logic.expression.Evaluator;
 import au.com.cybersearch2.classy_logic.expression.ExpressionException;
 import au.com.cybersearch2.classy_logic.expression.IntegerOperand;
 import au.com.cybersearch2.classy_logic.expression.OperatorEnum;
-import au.com.cybersearch2.classy_logic.expression.StringOperand;
+import au.com.cybersearch2.classy_logic.expression.TestBigDecimalOperand;
+import au.com.cybersearch2.classy_logic.expression.TestBooleanOperand;
+import au.com.cybersearch2.classy_logic.expression.TestDoubleOperand;
+import au.com.cybersearch2.classy_logic.expression.TestEvaluator;
+import au.com.cybersearch2.classy_logic.expression.TestIntegerOperand;
+import au.com.cybersearch2.classy_logic.expression.TestStringOperand;
 import au.com.cybersearch2.classy_logic.helper.EvaluationStatus;
-import au.com.cybersearch2.classy_logic.interfaces.Operand;
+import au.com.cybersearch2.classy_logic.helper.QualifiedName;
 import au.com.cybersearch2.classy_logic.interfaces.ItemList;
-import au.com.cybersearch2.classy_logic.list.ItemListVariable;
+import au.com.cybersearch2.classy_logic.interfaces.Operand;
 import au.com.cybersearch2.classy_logic.terms.Parameter;
-import static org.fest.assertions.api.Assertions.assertThat;
-import static org.fest.assertions.api.Assertions.failBecauseExceptionWasNotThrown;
-import static org.mockito.Mockito.*;
 
 /**
  * ListVariableTest
@@ -44,16 +48,17 @@ import static org.mockito.Mockito.*;
 public class ListVariableTest 
 {
 	private static final String NAME = "ListOperandName";
+    static QualifiedName QNAME = QualifiedName.parseName(NAME);
 
 	@Test
 	public void test_fixed_index_unify_evaluate_backup()
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(5)).thenReturn(false, true);
 		when(itemList.getItem(5)).thenReturn(Integer.valueOf(13));
-		ItemListVariable<Integer> variable = new ItemListVariable<Integer>(itemList, new IntegerOperand(NAME), 5, "5");
+		ItemListVariable<Integer> variable = new ItemListVariable<Integer>(itemList, new TestIntegerOperand(NAME), 5, "5");
 		Parameter otherTerm = new Parameter(NAME, Integer.valueOf(13));
 		assertThat(variable.unifyTerm(otherTerm, 1)).isEqualTo(1);
 		//variable.unifyTerm(otherTerm, 1);
@@ -70,13 +75,13 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(5)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(5)).thenReturn(Long.valueOf(13));
-		IntegerOperand x = new IntegerOperand("x", Long.valueOf(5));
-		Operand indexExpression = new Evaluator("y ", x, "++", null);
-		ItemListVariable<Long> variable = new ItemListVariable<Long>(itemList, new IntegerOperand(NAME), indexExpression, "y");
+		IntegerOperand x = new TestIntegerOperand("x", Long.valueOf(5));
+		Operand indexExpression = new TestEvaluator("y ", x, "++", null);
+		ItemListVariable<Long> variable = new ItemListVariable<Long>(itemList, new TestIntegerOperand(NAME), indexExpression, "y");
 		Parameter otherTerm = new Parameter(NAME, Long.valueOf(13));
 		// No unification possible
 		assertThat(variable.unifyTerm(otherTerm, 1)).isEqualTo(0);
@@ -95,12 +100,13 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+        when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(5)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(5)).thenReturn(Integer.valueOf(13));
-		Operand indexExpression = new IntegerOperand("x");
-		ItemListVariable<Integer> variable = new ItemListVariable<Integer>(itemList, new IntegerOperand(NAME), indexExpression, "x");
+		Operand indexExpression = new TestIntegerOperand("x");
+		ItemListVariable<Integer> variable = new ItemListVariable<Integer>(itemList, new TestIntegerOperand(NAME), indexExpression, "x");
 		try
 		{
 			variable.evaluate(1);
@@ -117,12 +123,13 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+        when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(5)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(5)).thenReturn(Integer.valueOf(13));
-		Operand indexExpression = new BooleanOperand("x", Boolean.TRUE);
-		ItemListVariable<Integer> variable = new ItemListVariable<Integer>(itemList, new IntegerOperand(NAME), indexExpression, "x");
+		Operand indexExpression = new TestBooleanOperand("x", Boolean.TRUE);
+		ItemListVariable<Integer> variable = new ItemListVariable<Integer>(itemList, new TestIntegerOperand(NAME), indexExpression, "x");
 		try
 		{
 			variable.evaluate(1);
@@ -140,10 +147,10 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(0)).thenReturn(false);
 		when(itemList.getLength()).thenReturn(10);
-		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new BigDecimalOperand(NAME), 0, "0");
+		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new TestBigDecimalOperand(NAME), 0, "0");
 		variable.assign(BigDecimal.ONE);
 	    verify(itemList).assignItem(0, BigDecimal.ONE);
 	}
@@ -153,11 +160,11 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(0)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(0)).thenReturn(BigDecimal.TEN);
-		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new BigDecimalOperand(NAME), 0, "0");
+		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new TestBigDecimalOperand(NAME), 0, "0");
 		variable.assign(BigDecimal.ONE);
 	    verify(itemList).assignItem(0, BigDecimal.ONE);
 	}
@@ -167,11 +174,12 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+        when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(0)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(0)).thenReturn(BigDecimal.TEN, BigDecimal.ZERO);
-		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new BigDecimalOperand(NAME), 0, "0");
+		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new TestBigDecimalOperand(NAME), 0, "0");
 		assertThat(variable.toString()).isEqualTo("ListOperandName.0 = 10");
 		Parameter param = new Parameter(NAME);
 		assertThat(variable.unifyTerm(param, 1)).isEqualTo(1);
@@ -184,9 +192,10 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
-		Operand expression = new IntegerOperand("x", Integer.valueOf(5));
-		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new BigDecimalOperand(NAME), expression, "x");
+        when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
+		Operand expression = new TestIntegerOperand("x", Integer.valueOf(5));
+		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new TestBigDecimalOperand(NAME), expression, "x");
 		assertThat(variable.toString()).isEqualTo("ListOperandName.x = <empty>");
 		assertThat(variable.getValue()).isNull();
 		verify(itemList).hasItem(-1);
@@ -197,19 +206,19 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(0)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(0)).thenReturn(BigDecimal.TEN);
-		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new BigDecimalOperand(NAME), 0, "0");
+		ItemListVariable<BigDecimal> variable = new ItemListVariable<BigDecimal>(itemList, new TestBigDecimalOperand(NAME), 0, "0");
 		Parameter otherTerm = new Parameter("x");
 		variable.unifyTerm(otherTerm, 1);
 		assertThat(otherTerm.getValue()).isEqualTo(BigDecimal.TEN);
-		assertThat(variable.getLeftOperandOps()).isEqualTo(new BigDecimalOperand("*").getLeftOperandOps());
-		assertThat(variable.getRightOperandOps()).isEqualTo(new BigDecimalOperand("*").getRightOperandOps());
-		assertThat(variable.booleanEvaluation(new BigDecimalOperand("L", BigDecimal.ZERO), OperatorEnum.LT, new BigDecimalOperand("R", BigDecimal.TEN))).isTrue();
-		assertThat(variable.numberEvaluation(new BigDecimalOperand("L", BigDecimal.ONE), OperatorEnum.PLUS, new BigDecimalOperand("R", BigDecimal.TEN))).isEqualTo(new BigDecimal("11"));
-		assertThat(variable.numberEvaluation(OperatorEnum.MINUS, new BigDecimalOperand("R", BigDecimal.TEN))).isEqualTo(new BigDecimal("-10"));
+		assertThat(variable.getLeftOperandOps()).isEqualTo(new TestBigDecimalOperand("*").getLeftOperandOps());
+		assertThat(variable.getRightOperandOps()).isEqualTo(new TestBigDecimalOperand("*").getRightOperandOps());
+		assertThat(variable.booleanEvaluation(new TestBigDecimalOperand("L", BigDecimal.ZERO), OperatorEnum.LT, new TestBigDecimalOperand("R", BigDecimal.TEN))).isTrue();
+		assertThat(variable.numberEvaluation(new TestBigDecimalOperand("L", BigDecimal.ONE), OperatorEnum.PLUS, new TestBigDecimalOperand("R", BigDecimal.TEN))).isEqualTo(new BigDecimal("11"));
+		assertThat(variable.numberEvaluation(OperatorEnum.MINUS, new TestBigDecimalOperand("R", BigDecimal.TEN))).isEqualTo(new BigDecimal("-10"));
 	}
 
 	@Test
@@ -217,17 +226,17 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(0)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(0)).thenReturn(Boolean.TRUE);
-		ItemListVariable<Boolean> variable = new ItemListVariable<Boolean>(itemList, new BooleanOperand(NAME), 0, "0");
+		ItemListVariable<Boolean> variable = new ItemListVariable<Boolean>(itemList, new TestBooleanOperand(NAME), 0, "0");
 		Parameter otherTerm = new Parameter("x");
 		variable.unifyTerm(otherTerm, 1);
 		assertThat(otherTerm.getValue()).isEqualTo(Boolean.TRUE);
-		assertThat(variable.getLeftOperandOps()).isEqualTo(new BooleanOperand("*").getLeftOperandOps());
-		assertThat(variable.getRightOperandOps()).isEqualTo(new BooleanOperand("*").getRightOperandOps());
-		assertThat(variable.booleanEvaluation(new BooleanOperand("L", Boolean.FALSE), OperatorEnum.NE, new BooleanOperand("R", Boolean.TRUE))).isTrue();
+		assertThat(variable.getLeftOperandOps()).isEqualTo(new TestBooleanOperand("*").getLeftOperandOps());
+		assertThat(variable.getRightOperandOps()).isEqualTo(new TestBooleanOperand("*").getRightOperandOps());
+		assertThat(variable.booleanEvaluation(new TestBooleanOperand("L", Boolean.FALSE), OperatorEnum.NE, new TestBooleanOperand("R", Boolean.TRUE))).isTrue();
 	}
 	
 	@Test
@@ -235,19 +244,19 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(0)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(0)).thenReturn(Long.valueOf(13L));
-		ItemListVariable<Long> variable = new ItemListVariable<Long>(itemList, new IntegerOperand(NAME), 0, "0");
+		ItemListVariable<Long> variable = new ItemListVariable<Long>(itemList, new TestIntegerOperand(NAME), 0, "0");
 		Parameter otherTerm = new Parameter("x");
 		variable.unifyTerm(otherTerm, 1);
 		assertThat(otherTerm.getValue()).isEqualTo(13L);
-		assertThat(variable.getLeftOperandOps()).isEqualTo(new IntegerOperand("*").getLeftOperandOps());
-		assertThat(variable.getRightOperandOps()).isEqualTo(new IntegerOperand("*").getRightOperandOps());
-		assertThat(variable.booleanEvaluation(new IntegerOperand("L", Long.valueOf(2)), OperatorEnum.GE, new IntegerOperand("R", Long.valueOf(2)))).isTrue();
-		assertThat(variable.numberEvaluation(new IntegerOperand("L", Long.valueOf(7)), OperatorEnum.XOR, new IntegerOperand("R", Long.valueOf(5)))).isEqualTo(new Long(2));
-		assertThat(variable.numberEvaluation(OperatorEnum.INCR, new IntegerOperand("R", Integer.valueOf(8)))).isEqualTo(new Long(9));
+		assertThat(variable.getLeftOperandOps()).isEqualTo(new TestIntegerOperand("*").getLeftOperandOps());
+		assertThat(variable.getRightOperandOps()).isEqualTo(new TestIntegerOperand("*").getRightOperandOps());
+		assertThat(variable.booleanEvaluation(new TestIntegerOperand("L", Long.valueOf(2)), OperatorEnum.GE, new TestIntegerOperand("R", Long.valueOf(2)))).isTrue();
+		assertThat(variable.numberEvaluation(new TestIntegerOperand("L", Long.valueOf(7)), OperatorEnum.XOR, new TestIntegerOperand("R", Long.valueOf(5)))).isEqualTo(new Long(2));
+		assertThat(variable.numberEvaluation(OperatorEnum.INCR, new TestIntegerOperand("R", Integer.valueOf(8)))).isEqualTo(new Long(9));
 	}
 
 	@Test
@@ -255,19 +264,19 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(0)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(0)).thenReturn(Double.valueOf(55.98d));
-		ItemListVariable<Double> variable = new ItemListVariable<Double>(itemList, new DoubleOperand(NAME), 0, "0");
+		ItemListVariable<Double> variable = new ItemListVariable<Double>(itemList, new TestDoubleOperand(NAME), 0, "0");
 		Parameter otherTerm = new Parameter("x");
 		variable.unifyTerm(otherTerm, 1);
 		assertThat(otherTerm.getValue()).isEqualTo(55.98d);
-		assertThat(variable.getLeftOperandOps()).isEqualTo(new DoubleOperand("*").getLeftOperandOps());
-		assertThat(variable.getRightOperandOps()).isEqualTo(new DoubleOperand("*").getRightOperandOps());
-		assertThat(variable.booleanEvaluation(new DoubleOperand("L", Double.valueOf(1.0)), OperatorEnum.LT, new DoubleOperand("R", Double.valueOf(0.5)))).isFalse();
-		assertThat(variable.numberEvaluation(new DoubleOperand("L", Double.valueOf(2.0)), OperatorEnum.STAR, new DoubleOperand("R", Double.valueOf(3.0)))).isEqualTo(new Double("6.0"));
-		assertThat(variable.numberEvaluation(OperatorEnum.MINUS, new DoubleOperand("R", Double.valueOf(99.9)))).isEqualTo(new Double(-99.9));
+		assertThat(variable.getLeftOperandOps()).isEqualTo(new TestDoubleOperand("*").getLeftOperandOps());
+		assertThat(variable.getRightOperandOps()).isEqualTo(new TestDoubleOperand("*").getRightOperandOps());
+		assertThat(variable.booleanEvaluation(new TestDoubleOperand("L", Double.valueOf(1.0)), OperatorEnum.LT, new TestDoubleOperand("R", Double.valueOf(0.5)))).isFalse();
+		assertThat(variable.numberEvaluation(new TestDoubleOperand("L", Double.valueOf(2.0)), OperatorEnum.STAR, new TestDoubleOperand("R", Double.valueOf(3.0)))).isEqualTo(new Double("6.0"));
+		assertThat(variable.numberEvaluation(OperatorEnum.MINUS, new TestDoubleOperand("R", Double.valueOf(99.9)))).isEqualTo(new Double(-99.9));
 	}
 	
 	@Test
@@ -275,16 +284,16 @@ public class ListVariableTest
 	{
 		@SuppressWarnings("rawtypes")
 		ItemList itemList = mock(ItemList.class);
-		when(itemList.getName()).thenReturn(NAME);
+		when(itemList.getQualifiedName()).thenReturn(QNAME);
 		when(itemList.hasItem(0)).thenReturn(true);
 		when(itemList.getLength()).thenReturn(10);
 		when(itemList.getItem(0)).thenReturn("1.0f");
-		ItemListVariable<String> variable = new ItemListVariable<String>(itemList, new StringOperand(NAME), 0, "0");
+		ItemListVariable<String> variable = new ItemListVariable<String>(itemList, new TestStringOperand(NAME), 0, "0");
 		Parameter otherTerm = new Parameter("x");
 		variable.unifyTerm(otherTerm, 1);
 		assertThat(otherTerm.getValue()).isEqualTo("1.0f");
-		assertThat(variable.getLeftOperandOps()).isEqualTo(new StringOperand("*").getLeftOperandOps());
-		assertThat(variable.getRightOperandOps()).isEqualTo(new StringOperand("*").getRightOperandOps());
-		assertThat(variable.booleanEvaluation(new StringOperand("L", "hello"), OperatorEnum.NE, new StringOperand("R", "world"))).isTrue();
+		assertThat(variable.getLeftOperandOps()).isEqualTo(new TestStringOperand("*").getLeftOperandOps());
+		assertThat(variable.getRightOperandOps()).isEqualTo(new TestStringOperand("*").getRightOperandOps());
+		assertThat(variable.booleanEvaluation(new TestStringOperand("L", "hello"), OperatorEnum.NE, new TestStringOperand("R", "world"))).isTrue();
 	}
 }
